syntax = "proto3";

package million.test.ss;

import "google/protobuf/descriptor.proto";
import "million/module/module_id.proto";

enum ServiceNameId {
    option (module.module_id) = MODULE_ID_TEST;

    SERVICE_NAME_ID_INVALID = 0;
    SERVICE_NAME_ID_TEST_A = 1;
    SERVICE_NAME_ID_TEST_B = 2;
}

enum MessageId {
    option (module.module_id) = MODULE_ID_TEST;
    
    MESSAGE_ID_INVALID = 0;
    MESSAGE_ID_LOGIN_REQUEST = 1;
    MESSAGE_ID_LOGIN_RESPONSE = 2;
}

extend google.protobuf.MessageOptions {
    MessageId message_id = 10010001;
}

message LoginRequest {
    option (message_id) = MESSAGE_ID_LOGIN_REQUEST;
    string value = 1;
}

message LoginResponse {
    option (message_id) = MESSAGE_ID_LOGIN_RESPONSE;
    string value = 1;
}