syntax = "proto3";

package Million.Proto.Ss;

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumOptions {
    SsMsgId ss_msg_id = 10001;
}

enum SsMsgId {
    SS_MSG_ID_INVALID = 0;
    SS_MSG_ID_TEST = 1;
}
